change Banner API
